fix: nav link dark mode color improved

--- a/packages/interface/src/components/Layout/Nav.module.css
+++ b/packages/interface/src/components/Layout/Nav.module.css
@@ -6,6 +6,10 @@
   text-decoration: none;
 }
 
+.Dark .NavItem {
+  color: #c2c2c2;
+}
+
 .NavItem:hover {
   text-decoration: underline;
 }
